@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-01-21 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add cloudi_service:source_subscriptions/2 for determining the current
+      subscriptions a service request source has
+
 2014-01-20 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Allow the cloudi_service_http_cowboy websocket_connect request
